# Mimir

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  ENV.md  GOAL.md  LICENSE  Makefile  PROGRESS.md  README.md  conftest.py  pyproject.toml  requirements.txt
benchmark_results/: agent_benchmark_Qwen3-4B-Instruct-2507.json  agent_benchmark_heavy12_Qwen3-4B-Instruct-2507.json  baseline_Qwen3-4B-Instruct-2507.json  baseline_Qwen3-4B-Instruct-2507_meta.json  concurrent_press_Qwen3-4B-Instruct-2507.json  dashboard_frame.txt  demo_Qwen3-4B-Instruct-2507.json  e2e_three_tier.json  gpu_log.txt  interference_sweep.json  llm_judge_Qwen3-4B-Instruct-2507.json  phase0_smoke.json  phase2_context_Qwen3-4B-Instruct-2507.json  phase2_context_Qwen3-4B-Instruct-2507_compstats.json  phase3_offload_Qwen3-4B-Instruct-2507.json  phase3_offload_Qwen3-4B-Instruct-2507_stats.json  phase4_branch_Qwen3-4B-Instruct-2507.json  phase4_branch_Qwen3-4B-Instruct-2507_savings.json  phase5_tiered_summary.json  phase6_lifecycle.json  phase7_fp8kv_Qwen3-4B-Instruct-2507.json  phase7_fp8kv_Qwen3-4B-Instruct-2507_summary.json  phase7b_multitask_sweep.json  phase_blockclass_Qwen3-4B-Instruct-2507.json  phase_c_lifecycle_Qwen3-4B-Instruct-2507.json  phase_d_cow_Qwen3-4B-Instruct-2507.json  phase_e_pin_Qwen3-4B-Instruct-2507.json  phase_f_fp8_fallback.json  phase_g_policy.json  phase_j_reclaim_evictable_Qwen3-4B-Instruct-2507.json  phase_k_multimodel.json  phase_l_auto_reclaim.json  phase_m_ab_Qwen3-4B-Instruct-2507.json  phase_o_concurrent_Qwen3-4B-Instruct-2507.json  phase_p_pressure_Qwen3-4B-Instruct-2507.json  phase_q_toolcall_concurrent_Qwen3-4B-Instruct-2507.json  phase_specdecode_Qwen3-4B-Instruct-2507.json  pin_three_tier_ab.json  recall_metric_Qwen3-4B-Instruct-2507.json  ssc_reload_ab.json  (+2 more)
benchmarks/: __init__.py  agent_loop.py  config.yaml  deepseek_client.py  harness.py  llm_judge.py  run.py  trace_replay.py  workloads.py
docs/: DECISIONS.md  RESULTS_SUMMARY.md  ROADMAP.md  VLLM_EDITABLE_SETUP.md  VLLM_PATCH_INVENTORY.md  三篇融合技术报告.md  三篇融合评测与边界.md  技术方案.md  技术演示.md  测试报告.md  系统设计.md  赛题说明.md  部署指南.md
(+91 files in other folders)
